Mon Oct  1 16:53:45 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * bin/CrossSync.pm:
          Bail out upon timeout.
          Delete temporary config files.

Thu Sep 13 17:42:09 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * bin/CrossSyncDDS.pm:
          Add method to construct uniqid.

Wed Sep 12 20:48:30 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * bin/cross_tests.lst:
          New list of crossplatform tests.

        * bin/dcps_tests.lst:
          Remove CrossPlatform test from general tests list.

        * tests/DCPS/Crossplatform/test_list.txt:
          Adding build configuration info.

Mon Sep 10 16:48:59 UTC 2007  Scott Harris <harris_s at ociweb dot com>

        * tests/DCPS/LivelinessTest/README

	  RT 11603 - removed comments about test failure because the it was fixed
          by Fri Jun  1 19:56:29 UTC 2007  Yan Dai  <dai_y@ociweb.com>.

Tue Aug 28 19:00:59 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * DevGuideExamples/DCPS/Messenger_ZeroCopy/publisher.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/subscriber.cpp:
          Add wide-char support.

        * dds/DCPS/transport/framework/EntryExit.h:
        * dds/DCPS/transport/framework/TransportFactory.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpLoader.cpp:
        * tests/DCPS/Crossplatform/Messenger_run_test.pl:
          Bumping up log level. Slight performance boost in ordinary
          builds.

Tue Aug 21 17:56:14 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * bin/CrossSync.pm:
        * bin/CrossSyncDDS.pm:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastLoader.cpp:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportConfiguration.inl:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportConfiguration.h: